change to bg property to fix dark mode contrast

--- a/source/_patterns/02-molecules/navigation/menu/_menu.scss
+++ b/source/_patterns/02-molecules/navigation/menu/_menu.scss
@@ -65,7 +65,7 @@ Molecule: Menu
           &:hover,
           &:focus,
           &:active {
-            background-color: var(--dark-blue);
+            background: var(--dark-blue);
             color: var(--light-green);
           }
         }
